@@ -21,7 +21,6 @@
 #include <config.h>
 
 #include <xapian.h>
-#include <xapian/queryparser.h>
 
 #include <iostream>
 
